2005-03-28  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_qshell.m4, config/ac_mqshell.m4 : Abort configure script 
	  when --with-qshell or --with-mqshell is supplied and PAM support
	  cannot be found (instead of silently deactivating these options).

2005-03-18  Mark Grondona <mgrondona@llnl.gov>

	* README.QsNet : Add reference to Quadrics' pdsh FAQ.

2005-03-12  Mark Grondona <mgrondona@llnl.gov>

	* src/common/xpoll.c : Move include of sys/types.h above sys/select.h
	  for OS X. (patch from Andrew Mortensen <admorten@umich.edu>).

2005-01-10  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec.in : Update path to xinetd init script as reported by 
	  Daniel Blueman <daniel.blueman@quadrics.com> for compatibility
	  with SuSE.

2005-01-07  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (qsw_have_elan3) : Fix bug in m/qshd which
	  caused pdsh to fail on nodes without an elan3 adapter.
	  (patch supplied by Daniel Blueman <daniel.blueman@quadrics.com>)

2004-12-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/mcmd.c : Update to mrsh protocol version 2.1,
	  which allows mrsh over "localhost."

	* : tag pdsh-2-4-1

2004-11-22  Mark Grondona <mgrondona@llnl.gov>

	* README.QsNet : Update location of libelanhosts. Describe 
	  "slurm" module.

	* src/pdsh/dsh.c (dsh) : Increase max number of open files to hard
	  limit for large fanout.

	* : tag pdsh-2-3-1
	
2004-09-21  Albert Chu <chu11@llnl.gov>

	Added large file support to pdcp (gnat pdsh/497).

	* src/pdsh/pcp_server.c (_sink): Redeclare 'size' as off_t type
	instead of integer.

	* src/pdsh/dsh.c (_rcp_sendfile): Fix typo in comments.
	
2004-09-21  Mark Grondona <mgrondona@llnl.gov>

	* configure.ac : Add AC_SYS_LARGEFILE (fix for gnat pdsh/497).

2004-07-30  Mark Grondona <mgrondona@llnl.gov>

	* : Tagged pdsh-2-2-1

2004-07-19  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Allow multiple jobids to -j option.
